--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.7.1",
     "@tailwindcss/forms": "^0.4.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "html-react-parser": "^1.4.6",
     "react": "^17.0.2",
@@ -18,8 +14,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
